--- a/test.html
+++ b/test.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>hi im sahib</h2>
-    <h3>how are you</h3>
+<h1>new line</h1>
 </body>
 </html>
